# ai_invoice_detector

./: .gitignore  README.md  pyproject.toml
docs/: make_demo_gif.py
examples/: make_sample_invoice.py
src/invoice_extractor/: __init__.py  cli.py  errors.py  extractor.py  llm.py  models.py  parser.py  text_extraction.py  validation.py
tests/: conftest.py  test_cli.py  test_extractor.py  test_llm.py  test_models.py  test_parser.py  test_validation.py
tests/fixtures/: anthropic_invoice_text.txt  sample_invoice_text.txt  sample_llm_response.json
web/: build.js  server.py
web/src/: app.jsx
web/static/: app.js  index.html
