[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-invoice-extractor"
version = "0.1.0"
description = "Extract structured, schema-validated data from invoice PDFs/images — fully offline, rule-based, no API or token cost."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rodrigo Soria" }]
keywords = ["invoice", "ocr", "automation", "pdf", "tesseract", "parsing"]
dependencies = [
    "pydantic>=2.6",
    "pdfplumber>=0.11",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9"]
llm = ["anthropic>=0.40"]

[project.scripts]
extract-invoice = "invoice_extractor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/invoice_extractor"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The demo generator embeds verbatim terminal output; those display lines are
# intentionally wide for fidelity to a real run.
"docs/make_demo_gif.py" = ["E501"]
